--- a/src/pages/QuestionsPage.css
+++ b/src/pages/QuestionsPage.css
@@ -39,6 +39,13 @@
   padding-top: 24px; /* TODO: Use variable */
 }
 
-.question-page__content .card {
+.question-page__category-section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.question-page__category-section .card {
   width: 100%;
 }
