--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -15,16 +15,26 @@
 
 /* TODO: Define as base style? */
 .button:focus-visible {
-  outline: 2px solid #131415;
+  outline: 2px solid var(--focus-outline-primary);
   outline-offset: 2px;
 }
 
-.button svg {
-  height: 1.5rem;
-  width: 1.5rem;
+.button .icon.icon-20 {
+  height: 20px;
+  width: 20px;
 }
 
-.button span {
+.button .icon.icon-24 {
+  height: 24px;
+  width: 24px;
+}
+
+.button .icon > * {
+  height: 100%;
+  width: 100%;
+}
+
+.button .button__content {
   padding: 0;
   margin: 0;
 }
@@ -45,7 +55,7 @@
   padding: 6px 12px 6px 14px;
 }
 
-.button--small svg {
+.button--small .icon {
   height: 1rem;
   width: 1rem;
 }
@@ -55,31 +65,37 @@
  */
 
 .button--solid {
-  background-color: rgb(19, 20, 21);
-  color: rgb(248, 249, 250);
+  background-color: var(--button-solid-bg);
+  color: var(--text-negative);
+  border-color: transparent;
 }
 
 .button--solid:hover {
-  border-color: transparent;
-  background-color: rgba(0, 0, 0, 0.7);
-  /* TODO: Define as variable */
+  background-color: var(--button-solid-bg-hover);
 }
 
 .button--outline {
   background-color: transparent;
-  border: 2px solid rgb(19, 20, 21);
-  color: rgb(19, 20, 21);
+  border: 2px solid var(--primary);
+  color: var(--button-outline);
 }
 
-.button--outline:hover {
-  background-color: rgba(0, 0, 0, 0.09);
-  border: 2px solid rgb(19, 20, 21);
+.button--outline:hover,
+.button--outline:disabled:hover {
+  background-color: var(--button-outline-bg-hover);
+  border: 2px solid var(--primary);
   outline: none;
+}
+
+.button--outline:disabled {
+  border-color: var(--button-outline-disabled);
+  cursor: not-allowed;
 }
 
 .button--ghost {
   border: none;
   background-color: transparent;
+  color: var(--primary-text);
 }
 
 .button--ghost:hover {
