--- a/src/components/PageHeader/PageHeader.css
+++ b/src/components/PageHeader/PageHeader.css
@@ -1,19 +1,20 @@
+/* TODO: Delete file? */
 .page-header {
-  padding: var(--spacing-2);
+  padding: 24px;
   text-align: center;
+  background-color: var(--page-header-bg);
+  width: 100%;
 }
 
-.page-header_title {
+.page-header__title {
   font-size: 2.8rem;
   line-height: 1.3;
   font-weight: 900;
   margin: 0;
 }
 
-.page-header_desc {
+.page-header__desc {
   line-height: 1.5;
   max-width: 680px;
-  /* TODO: Use variable */
-  margin: 8px var(--spacing);
-  /* TODO: Use variable */
+  margin: 8px var(--spacing); /* TODO: Use variable */
 }
