--- a/src/components/ToggleButton/ToggleButton.css
+++ b/src/components/ToggleButton/ToggleButton.css
@@ -1,3 +1,4 @@
-.toggle-button.toggled {
-  background-color: rgba(0, 0, 0, 0.09);
+.toggle-button.toggled,
+.toggle-button.toggled:hover {
+  background-color: var(--button-toggled-bg);
 }
