--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -1,24 +1,48 @@
 /* TODO: Options need to collapse at breakpoint 768px */
 
 .toolbar {
+  position: relative;
   width: 100%;
   height: 72px; /* TODO: Responsive height, use variable */
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 7px 0px;
-  background-color: white; /* TODO: Use a variable */
+  box-shadow: var(--black-15) 0 0 7px 0;
+  background-color: var(--toolbar-bg);
+  display: flex;
+  align-items: center;
+  padding-left: 24px;
+  padding-right: 24px;
+  border-bottom: 1px solid #fff;
 }
 
 .toolbar__nav {
   max-width: 1080px; /* TODO: Use variable? */
-
-  /* border: 1px solid black; */
   display: flex;
   flex-direction: row;
   justify-self: space-between;
   align-items: center;
+  justify-content: center;
+  font-weight: 700;
+}
+
+.toolbar__nav a {
+  text-decoration: none;
 }
 
 .toolbar__list {
   display: flex;
   flex-direction: row;
   list-style-type: none;
+}
+
+.toolbar__logo-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 24px;
+}
+
+.toolbar__logo {
+  height: 40px;
+  width: 40px;
+  background-color: var(--yle-logo);
+  border-radius: 2px;
 }
