--- a/src/features/questionsForm/styles/QuestionCard.css
+++ b/src/features/questionsForm/styles/QuestionCard.css
@@ -1,23 +1,15 @@
-.row_centered {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
-
 .card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: white; /* TODO: Use a variable */
+  background-color: var(--card-bg);
   margin-bottom: 1.5rem;
-  padding: 5rem 1.5rem;
-  /* TODO: Use variable */
-  border-radius: 4px;
+  padding: 5rem 1.5rem; /* TODO: Use variable */
+  border-radius: var(--border-radius-sm);
   max-width: 680px;
 }
 
-.card_header {
+.card__header {
   gap: 1.5rem; /* TODO: Use variable */
 }
 
@@ -33,6 +25,7 @@
   font-size: 24px;
   max-width: 343px;
   text-align: center;
+  margin: 20px 0;
 }
 
 .info-buttons {
@@ -40,11 +33,11 @@
   margin-bottom: 18px;
 }
 
-.answer_buttons {
+.answer__buttons {
   gap: 24px; /* TODO: Use variable */
   margin-top: 40px;
 }
 
-.answer_radio {
+.answer__radio {
   padding-top: 8px; /* TODO: Use variable */
 }
