--- a/src/pages/QuestionsPage.css
+++ b/src/pages/QuestionsPage.css
@@ -5,22 +5,10 @@
   align-items: center;
   padding: 32px 0; /* TODO: Use variable */
   text-align: center;
-  background-color: white;
+  background-color: var(--page-header-bg);
 }
 
 .question-page__header h1 {
-  font-size: 28px; /* TODO: Use variable */
-  line-height: 130%;
-  font-weight: 900;
-  color: rgb(26, 43, 74);
-  margin: 0;
-}
-
-.question-page__subtitle {
-  font-size: 14px; /* TODO: Use a variable */
-  line-height: 21px;
-  font-weight: 700;
-  color: rgb(26, 43, 74);
   margin: 0;
 }
 
@@ -32,7 +20,6 @@
 
 .question-page__content {
   width: 100%;
-  background-color: rgb(241, 242, 244);
   display: flex;
   flex-direction: column;
   align-items: center;
