--- a/src/features/candidateAnswers/styles/AnswerList.css
+++ b/src/features/candidateAnswers/styles/AnswerList.css
@@ -22,5 +22,5 @@
 }
 
 .answer-list__expand-button:hover {
-  background-color: var(--button-outline-hover);
+  background-color: var(--button-outline-bg-hover);
 }
