--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -31,14 +31,44 @@ body {
   height: 100%;
 }
 
+#main-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: calc(100% - var(--toolbar-height));
+}
+
 main {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  flex: 1 1 auto;
+  place-items: center flex-start;
+  flex: 1 0 auto;
 }
 
+#app-footer {
+  background-color: var(--footer-bg);
+  width: 100%;
+  padding: 21px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1 0 0%;
+  text-align: center;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 4px 16px; /* TODO: Use variables */
+  font-size: 14px;
+}
+
+.footer-links a {
+  padding: 12px 24px;
+  font-weight: 700;
+}
+
+/* TODO: Delete? */
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
