--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -16,3 +16,11 @@
   align-items: center;
   width: 100%;
 }
+
+.column-centered {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
