--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -3,14 +3,14 @@
 .toolbar {
   position: relative;
   width: 100%;
-  height: 72px; /* TODO: Responsive height, use variable */
+  height: var(--toolbar-height); /* TODO: Responsive height, use variable */
   box-shadow: var(--black-15) 0 0 7px 0;
   background-color: var(--toolbar-bg);
   display: flex;
   align-items: center;
   padding-left: 24px;
   padding-right: 24px;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid #fff; /* TODO: Check whether this matches themes? */
 }
 
 .toolbar__nav {
