--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,3 +1,9 @@
+.heading-1-large {
+  font-size: 32px;
+  font-weight: 700;
+  color: var(--heading-primary);
+}
+
 .heading-1 {
   font-size: 28px;
   color: var(--heading-primary);
@@ -5,10 +11,10 @@
   font-weight: 900;
 }
 
-.heading-1-larger {
-  font-size: 32px;
-  font-weight: 700;
-  color: var(--heading-primary);
+.heading-3 {
+  font-size: 18px;
+  font-weight: 600;
+  color: var(--text-primary);
 }
 
 .subtitle {
@@ -22,4 +28,10 @@
   font-size: 16px;
   line-height: 150%;
   font-weight: 700;
+}
+
+.body-small {
+  font-size: 14px;
+  line-height: 150%;
+  font-weight: normal;
 }
