--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,8 +2,8 @@
 @import "./variables.css";
 @import "./reset.css";
 @import "./typography.css";
-@import "./themes/light-theme.css";
-@import "./themes/dark-theme.css";
+/* @import "./themes/light-theme.css";
+@import "./themes/dark-theme.css"; */
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; /* TODO: Update font family */
@@ -36,16 +36,7 @@ a:hover {
 }
 
 #main-wrapper {
-  display: flex;
-  flex-direction: column;
-  height: calc(100% - var(--toolbar-height));
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-  place-items: center flex-start;
-  flex: 1 0 auto;
+  height: calc(100% - 76px);
 }
 
 #app-footer {
@@ -55,25 +46,6 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex: 0 0 0%;
   text-align: center;
-}
-
-.footer-links {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 4px 16px;
-  font-size: 14px;
-}
-
-.footer-links a {
-  padding: 12px 24px;
-  font-weight: 700;
-}
-
-.page-header {
-  padding: 24px;
-  text-align: center;
-  background-color: var(--page-header-bg);
-  width: 100%;
 }
