--- a/src/features/candidateAnswers/styles/AnswerCard.css
+++ b/src/features/candidateAnswers/styles/AnswerCard.css
@@ -1,15 +1,6 @@
 .answer-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: var(--card-bg);
-  padding: 24px;
-  border-radius: var(--border-radius-sm);
+  /* TODO: Use variable */
   max-width: 680px;
-}
-
-.answer-card .card__header {
-  gap: 1.5rem;
 }
 
 .question {
@@ -18,13 +9,4 @@
   max-width: 343px;
   text-align: center;
   margin: 20px 0;
-}
-
-.answer__buttons {
-  gap: 24px;
-  margin-top: 8px;
-}
-
-.answer__radio {
-  padding-top: 8px;
 }
