--- a/src/features/candidatesMatch/styles/CandidatesMatchBar.css
+++ b/src/features/candidatesMatch/styles/CandidatesMatchBar.css
@@ -1,32 +1,6 @@
 .match-bar {
-  position: fixed;
-  z-index: 99;
-  top: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: var(--match-bar-height);
-  width: 100%;
-  background-color: var(--toolbar-bg); /* TODO: Double check color */
-  box-shadow: var(--match-bar-shadow);
-}
-
-.match-bar__content {
-  max-width: 520px;
-  display: flex;
-  align-items: center;
-  width: 100%;
-}
-
-.match-bar__matches {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 0;
-  padding-top: 4px;
+  background-color: var(--toolbar-bg); /* TODO: Add to colors */
+  box-shadow: rgba(0, 0, 0, 19%) 0 2px 4px 0; /* TODO: Use a variable */
 }
 
 /**
