--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,39 +1,33 @@
 :root {
-  --dark-blue: #1a2b4a;
-  --blue-black: #131415; /* rgb(19, 20, 21); */
-  --yle-logo: #00b4c8;
+  --dark-blue: 219, 48%, 20%;
+  --blue-black: 210, 5%, 8%;
+  --yle-logo: 186, 100%, 39%;
 
   /* Grayscale */
-  --gray-5: #f8f9fa; /* rgb(248, 249, 250) */
-  --gray-10: #f1f2f4;
-  --gray-20: #e8e9eb;
-  --gray-30: #d8d9db;
-  --gray-40: #b4b6b7;
-  --gray-50: #949697;
-  --gray-60: #4a4f54;
-  --gray-70: #323639;
-  --gray-80: #292b2d;
-  --gray-90: #1f2123;
-  --gray-95: #131415;
-  --black-9: rgba(0, 0, 0, 9%);
-  --black-15: rgba(0, 0, 0, 15%);
-  --black-41: rgba(0, 0, 0, 41%);
-  --black-70: rgba(0, 0, 0, 70%);
-  --white-17: rgba(255, 255, 255, 17%);
-  --white-21: rgba(255, 255, 255, 21%);
-  --white-71: rgba(255, 255, 255, 71%);
+  --gray-5: 210, 17%, 98%;
+  --gray-10: 220, 12%, 95%;
+  --gray-20: 220, 7%, 92%;
+  --gray-30: 220, 4%, 85%;
+  --gray-40: 200, 2%, 71%;
+  --gray-50: 200, 1%, 59%;
+  --gray-60: 210, 6%, 31%;
+  --gray-70: 206, 7%, 21%;
+  --gray-80: 210, 5%, 17%;
+  --gray-90: 210, 6%, 13%;
+  --gray-95: 210, 5%, 8%;
+  --black-9: 0, 0%, 0%, 0.09;
+  --black-15: 0, 0%, 0%, 0.15;
+  --black-41: 0, 0%, 0%, 0.41;
+  --black-70: 0, 0%, 0%, 0.702;
+  --white-17: 0, 0%, 100%, 0.17;
+  --white-21: 0, 0%, 100%, 0.21;
+  --white-71: 0, 0%, 100%, 0.71;
 
   /* Semantic colors: light theme */
-  --error: #d72a56;
-  --success: #058657;
+  --error: 345, 68%, 50%;
+  --success: 158, 93%, 27%;
 
   /* Semantic colors: dark theme */
-  --live-red: #e90e43;
-  --green-bright: #06b173;
-
-  /* Candidate colors */
-  --ant-blue: #1677ff;
-  --mantine-blue: #339af0;
-  --chakra-teal: #319795;
-  --shadcn-black: #18181b;
+  --live-red: 345, 89%, 48%;
+  --green-bright: 158, 93%, 36%;
 }
