--- a/src/styles/themes/light-theme.css
+++ b/src/styles/themes/light-theme.css
@@ -40,7 +40,7 @@
   --tag-negative-text: #000;
 
   /* Candidate answers */
-  --candidate-comment-bg: #e8e9eb;
+  --candidate-comment-bg: var(--gray-20);
   --candidate-answer-number-bg: var(--gray-5);
   --candidate-img-placeholder: var(--gray-10);
   --user-answer-bubble-text: var(--gray-5);
