--- a/src/pages/QuestionsPage.css
+++ b/src/pages/QuestionsPage.css
@@ -8,6 +8,13 @@
   background-color: var(--page-header-bg);
 }
 
+.question-page__title {
+  font-size: 2.8rem;
+  line-height: 1.3;
+  font-weight: 900;
+  margin: 0;
+}
+
 .question-page__header h1 {
   margin: 0;
 }
