refactor: replace separate feature-specific stylesheets with Tailwind classes

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -3,6 +3,7 @@
   --blue-black: 210, 5%, 8%;
   --yle-logo: 186, 100%, 39%;
 
+  --section-border: hsl(220, 7%, 92%);
   /* Grayscale */
   --gray-5: 210, 17%, 98%;
   --gray-10: 220, 12%, 95%;
