--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,6 +23,7 @@
     --gray-95: 210, 5%, 8%;
     --black-9: 0, 0%, 0%, 0.09;
     --black-15: 0, 0%, 0%, 0.15;
+    --black-19: 0, 0%, 0%, 0.19;
     --black-41: 0, 0%, 0%, 0.41;
     --black-70: 0, 0%, 0%, 0.702;
     --black: 0, 0%, 0%;
@@ -32,8 +33,8 @@
     --white-71: 0, 0%, 100%, 0.71;
 
     /* Semantic colors: light theme */
-    --error: 345, 68%, 50%;
-    --success: 158, 93%, 27%;
+    --disagree: 345, 68%, 50%;
+    --agree: 158, 93%, 27%;
 
     /* Semantic colors: dark theme */
     --live-red: 345, 89%, 48%;
@@ -49,9 +50,6 @@
     --card: var(--white);
     --card-foreground: var(--blue-black);
 
-    --popover: 0 0% 100%;
-    --popover-foreground: var(--blue-black);
-
     --primary: var(--blue-black); /* Slate: 222.2 47.4% 11.2%; */
     --primary-foreground: 210 40% 98%;
 
@@ -64,16 +62,11 @@
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-
     --border: var(--blue-black);
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
 
     --radius: 0.5rem;
-
-    /* Component colors */
   }
 
   /**
@@ -117,5 +110,11 @@
   }
   body {
     @apply bg-body text-foreground;
+  }
+}
+
+@layer utilities {
+  .clip-arrow-small {
+    clip-path: polygon(0 0, 50% 100%, 100% 0);
   }
 }
