--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,8 @@
-@import "./variables.css";
 @import "./reset.css";
-@import "./typography.css";
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; /* TODO: Update font family */
-  /* line-height: 1.5;
-  font-weight: 400;
+  /*
   font-synthesis: none;
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
