feat: replace DIY modal with shadcn/ui dialog. Style non-toggle buttons.

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,11 +1,11 @@
 :root {
   --dark-blue: 219, 48%, 20%;
-  --blue-black: 210, 5%, 8%;
+  --blue-black: 210, 5%, 8%; /* #131415; rgb(19, 20, 21); */
   --yle-logo: 186, 100%, 39%;
 
   --section-border: hsl(220, 7%, 92%);
   /* Grayscale */
-  --gray-5: 210, 17%, 98%;
+  --gray-5: 210, 17%, 98%; /* rgb(248, 249, 250) */
   --gray-10: 220, 12%, 95%;
   --gray-20: 220, 7%, 92%;
   --gray-30: 220, 4%, 85%;
