--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,7 @@
     --gray-80: 210, 5%, 17%;
     --gray-90: 210, 6%, 13%;
     --gray-95: 210, 5%, 8%;
+    /* TODO: Use opacity modifiers instead? */
     --black-9: 0, 0%, 0%, 0.09;
     --black-15: 0, 0%, 0%, 0.15;
     --black-19: 0, 0%, 0%, 0.19;
@@ -51,10 +52,14 @@
     --card: var(--white);
     --card-foreground: var(--blue-black);
 
-    --primary: var(--blue-black); /* Slate: 222.2 47.4% 11.2%; */
-    --primary-foreground: 210 40% 98%;
+    --modal: var(--white);
+    --backdrop: var(--black-41);
 
-    --secondary: 210 40% 96.1%;
+    --primary: var(--blue-black);
+    --primary-foreground: var(--white);
+
+    /* TODO: Delete */
+    --secondary: var(--gray-5);
     --secondary-foreground: 222.2 47.4% 11.2%;
 
     --muted: 210 40% 96.1%;
@@ -75,30 +80,31 @@
   */
   .dark {
     --body: var(--black);
-    --background: var(--blue-black); /* 222.2 84% 4.9%; */
+    --background: var(--blue-black);
     --foreground: var(--gray-5);
     --heading: var(--white);
 
     --card: var(--blue-black);
     --card-foreground: var(--gray-5);
 
+    --modal: var(--gray-90);
+    --backdrop: var(--black-70);
+
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
 
-    --primary: var(--blue-black);
-    --primary-foreground: var(--gray-5); /* Text primary */
+    --primary: var(--gray-5);
+    --primary-foreground: var(
+      --blue-black
+    ); /* Foreground to pair with --primary */
 
+    /* TODO: Delete */
     --secondary: var(--gray-5); /* */
     --secondary-foreground: var(--blue-black); /* Text negative */
 
+    /* TODO: Delete */
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
-
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
-
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
 
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
