--- a/src/features/questionsForm/styles/QuestionCard.css
+++ b/src/features/questionsForm/styles/QuestionCard.css
@@ -4,13 +4,13 @@
   align-items: center;
   background-color: var(--card-bg);
   margin-bottom: 1.5rem;
-  padding: 5rem 1.5rem; /* TODO: Use variable */
+  padding: 5rem 1.5rem;
   border-radius: var(--border-radius-sm);
   max-width: 680px;
 }
 
 .card__header {
-  gap: 1.5rem; /* TODO: Use variable */
+  gap: 1.5rem;
 }
 
 .category {
@@ -33,11 +33,6 @@
   margin-bottom: 18px;
 }
 
-.answer__buttons {
-  gap: 24px; /* TODO: Use variable */
-  margin-top: 40px;
-}
-
 .answer__radio {
-  padding-top: 8px; /* TODO: Use variable */
+  padding-top: 8px;
 }
