--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -7,13 +7,11 @@ dialog.modal {
   background-color: var(--modal-bg);
   box-shadow: var(--modal-box-shadow);
   padding: 0;
-
-  /* TODO: Use variables? */
-  min-width: 300px;
-  min-height: 120px;
-  max-height: 550px;
+  min-width: var(--modal-min-width);
+  min-height: var(--modal-min-height);
+  max-height: var(--modal-max-height);
+  max-width: var(--modal-max-width);
   overflow-y: auto;
-  max-width: 343px;
 }
 
 dialog.modal::backdrop {
