--- a/src/components/SectionCard.tsx/SectionCard.css
+++ b/src/components/SectionCard.tsx/SectionCard.css
@@ -13,8 +13,9 @@
   margin: 0;
   font-size: 20px;
   line-height: 140%;
+  font-weight: 900;
 }
 
 .section-card__content {
-  padding: 24px; /* TODO: Use variable */
+  padding: 24px;
 }
