--- a/src/features/candidateAnswers/styles/AnswerCard.css
+++ b/src/features/candidateAnswers/styles/AnswerCard.css
@@ -3,28 +3,28 @@
   flex-direction: column;
   align-items: center;
   background-color: var(--card-bg);
-  padding: 24px; /* TODO: Use variable */
+  padding: 24px;
   border-radius: var(--border-radius-sm);
   max-width: 680px;
 }
 
 .answer-card .card__header {
-  gap: 1.5rem; /* TODO: Use variable */
+  gap: 1.5rem;
 }
 
 .question {
   font-weight: 900;
   font-size: 24px;
-  max-width: 343px; /* TODO: Use variable */
+  max-width: 343px;
   text-align: center;
   margin: 20px 0;
 }
 
 .answer__buttons {
-  gap: 24px; /* TODO: Use variable */
+  gap: 24px;
   margin-top: 8px;
 }
 
 .answer__radio {
-  padding-top: 8px; /* TODO: Use variable */
+  padding-top: 8px;
 }
