--- a/src/features/candidatesMatch/styles/CandidatesMatchBar.css
+++ b/src/features/candidatesMatch/styles/CandidatesMatchBar.css
@@ -6,10 +6,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 76px; /* TODO: Use a variable */
+  height: var(--match-bar-height);
   width: 100%;
   background-color: var(--toolbar-bg); /* TODO: Double check color */
-  box-shadow: rgba(0, 0, 0, 19%) 0 2px 4px 0; /* TODO: Use a variable */
+  box-shadow: var(--match-bar-shadow);
 }
 
 .match-bar__content {
@@ -26,7 +26,7 @@
   justify-content: space-evenly;
   align-items: center;
   padding: 0;
-  padding-top: 4px; /* TODO: Use a variable */
+  padding-top: 4px;
 }
 
 /**
