--- a/src/pages/QuestionsPage.css
+++ b/src/pages/QuestionsPage.css
@@ -3,7 +3,7 @@
   width: 100%;
   flex-direction: column;
   align-items: center;
-  padding: 32px 0; /* TODO: Use variable */
+  padding: 32px 0;
   text-align: center;
   background-color: var(--page-header-bg);
 }
@@ -30,7 +30,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 24px; /* TODO: Use variable */
+  padding-top: 24px;
 }
 
 .question-page__category-section {
