--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,6 +26,13 @@ body {
   background-color: var(--bg-primary);
 }
 
+a,
+a:visited,
+a:hover {
+  color: inherit;
+  text-decoration: underline;
+}
+
 #root {
   height: 100%;
 }
@@ -50,7 +57,6 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex: 1 0 0%;
   text-align: center;
 }
 
@@ -58,7 +64,7 @@ main {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 4px 16px; /* TODO: Use variables */
+  padding: 4px 16px;
   font-size: 14px;
 }
 
