--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,8 +34,8 @@
     --white-71: 0, 0%, 100%, 0.71;
 
     /* Semantic colors: light theme */
-    --disagree: 345, 68%, 50%;
-    --agree: 158, 93%, 27%;
+    --error: 345, 68%, 50%;
+    --success: 158, 93%, 27%;
 
     /* Semantic colors: dark theme */
     --live-red: 345, 89%, 48%;
@@ -58,6 +58,9 @@
     --primary: var(--blue-black);
     --primary-foreground: var(--white);
 
+    --agree: var(--error);
+    --disagree: var(--success);
+
     /* TODO: Delete */
     --secondary: var(--gray-5);
     --secondary-foreground: 222.2 47.4% 11.2%;
@@ -70,7 +73,7 @@
 
     --border: var(--blue-black);
     --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
+    --ring: var(--blue-black);
 
     --radius: 0.5rem;
   }
@@ -94,9 +97,11 @@
     --popover-foreground: 210 40% 98%;
 
     --primary: var(--gray-5);
-    --primary-foreground: var(
-      --blue-black
-    ); /* Foreground to pair with --primary */
+    /* Foreground to pair with --primary */
+    --primary-foreground: var(--blue-black);
+
+    --agree: var(--green-bright);
+    --disagree: var(--live-red);
 
     /* TODO: Delete */
     --secondary: var(--gray-5); /* */
@@ -108,7 +113,7 @@
 
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
+    --ring: var(--gray-5);
   }
 }
 
