--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -58,8 +58,8 @@
     --primary: var(--blue-black);
     --primary-foreground: var(--white);
 
-    --agree: var(--error);
-    --disagree: var(--success);
+    --agree: var(--success);
+    --disagree: var(--error);
 
     /* TODO: Delete */
     --secondary: var(--gray-5);
@@ -73,6 +73,7 @@
 
     --border: var(--blue-black);
     --input: 214.3 31.8% 91.4%;
+    --radio: var(--gray-30);
     --ring: var(--blue-black);
 
     --radius: 0.5rem;
@@ -113,6 +114,7 @@
 
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
+    --radio: var(--gray-60);
     --ring: var(--gray-5);
   }
 }
